# photoToLocation

./: .gitignore  config.yaml  feature-extraction.py  main.py  play_single_round.py  pyproject.toml  test_with_visualization.py  training.txt
data/: indices.cell_to_idx.pt  indices.centroids.pt  indices.json
data/plonkit_cache/: AD.json  AE.json  AL.json  AQ.json  AR.json  AS.json  AT.json  AU.json  BD.json  BE.json  BG.json  BM.json  BO.json  BR.json  BT.json  BW.json  BY.json  CA.json  CC.json  CH.json  CL.json  CN.json  CO.json  CR.json  CW.json  CX.json  CY.json  CZ.json  DE.json  DK.json  DO.json  EC.json  EE.json  EG.json  ES.json  FI.json  FK.json  FO.json  FR.json  GB.json  (+96 more)
geoguessr_agent/: config.py  constants.py  geoutils.py
geoguessr_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
geoguessr_agent/data/: __init__.py  loader.py  mapper.py  panorama.py
geoguessr_agent/features/: __init__.py  categories.py  extractor.py  fusion.py
geoguessr_agent/game/: actions.py  browser.py  state_machine.py
geoguessr_agent/inference/: gradcam.py  pipeline.py
geoguessr_agent/model/: backbone.py  geolocator.py  heads.py  losses.py
geoguessr_agent/plonkit/: kb.py  scraper.py
geoguessr_agent/self_play/: buffer.py  loop.py  reward.py
geoguessr_agent/training/: dpo_trainer.py  metrics.py  trainer.py
scripts/: build_index.py  compare_models.py  dpo_finetune.py  extract_training_features.py  scrape_plonkit.py  selfplay.py  test_visualization.py  train.py
