[project]
name = "geoguessr-agent"
version = "0.1.0"
description = "Autonomous AI agent for playing GeoGuessr via OpenGuessr"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "playwright>=1.40.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "scikit-learn>=1.3.0",
    "wandb>=0.15.0",
    "s2sphere>=0.2.5",
    "geographiclib>=2.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "matplotlib>=3.7.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
