[project]
name = "geoguessr-agent"
version = "0.1.0"
description = "Geolocation from Street View photos"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "s2sphere>=0.2.5",
    "scipy>=1.10.0",
    "transformers>=4.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "matplotlib>=3.7.0",
]
monitoring = [
    "wandb>=0.15.0",
]
selfplay = [
    "playwright>=1.40.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["logs*", "data*", "checkpoints*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.pt", "*.pkl", "*.json", "*.yaml", "*.yml"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
